# distilling-flask

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  benchmark.py  calculate_activity_ngp.py  celery_worker.py  gunicorn_conf.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
application/: .config.py.swp  __init__.py  app.py  cli.py  config.py  converters.py  labels.py  models.py  routes.py  stravatalk.py  tasks.py  util.py  wsgi.py
application/functional_tests/: base.py  test_activity_validation.py  test_new_visitor.py  test_strava_auth.py  tests.py
application/main/: __init__.py  views.py
application/plotlydash/: aio_components.py  app.py  dashboard_activity.py  dashboard_activity_basic.py  dashboard_db.py  dashboard_log.py  dashboard_strava.py  dashboard_upload.py  figure_layout.py  layout.py  plots.py  util.py
application/strava_api/: __init__.py  forms.py  tasks.py  views.py
application/templates/: .activity_detail.html.swp  403.html  activity_list.html  admin.html  admin_base.html  base.html  landing_page.html
application/tests/: base.py  functional_tests.py  mock_stravatalk.py  settings.py  test_models.py  test_strava_api.py  test_stravatalk.py  test_views.py  tests.py  util.py
application/util/: dataframe.py  mock_stravalib.py  power.py  readers.py  units.py
distilling_flask/: __init__.py  app.py  cli.py  config.py  messages.py  models.py  tasks.py  wsgi.py
distilling_flask/main/: errors.py  (+1 more)
power/: adjusted_pace.py  core.py  daniels_formula.py  ngp_gap.csv  util.py
tests/: mock_stravalib.py  util.py
(+121 files in other folders)
